# llvm-mlir-fundamentals

./: README.md
MLIR_ctx_IR_Mod_OP/: mlir_struct.cpp
MLIR_tree_traversal/: CMakeLists.txt
basics/: IR_hierarchy.txt  PHI.txt  SSA.txt  SSA_PHI.txt  SSA_PHI_traversal.txt  diff_MLIR_LLVM.txt  llvm_Arrayref.cpp  llvm_DenseMap.cpp  llvm_SmallVector.cpp  llvm_Stringref.cpp
basics/example/: a.out  ssa_cfg.cpp  test.cpp  test.ll  test1.cpp
llvm/cse/: CMakeLists.txt  MyCSE.cpp  output.ll  test.ll
llvm/dce/: CMakeLists.txt  MyDCE.cpp  test.ll
llvm_backend/: 01_triple.cpp  02_registry.cpp  03_target_machine.cpp  cfg.cpp  cfg_traversal.cpp  dom_llvm.cpp  reachablity.cpp
mlir/Lowering/: linalg_dialect.txt  onnx_dialect.txt  tosa_dialect.txt
mlir/MLIR_ctx_IR_Mod_OP/: CMakeLists.txt
mlir/MLIR_op_properties/: CMakeLists.txt  mlir_ops.cpp
mlir/MLIR_tree_traversal/: mlir_tree.cpp
mlir/pattern_rewrite/add_zero_pat_match/: AddZeroPass.cpp  AddZeroPattern.h  CMakeLists.txt  build_steps.txt  main.cpp
open_contribution/bug_203693/: after.mlir  after_no.mlir  before.mlir  repro.txt  test.mlir  test2.mlir  test2_out.mlir
